--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "email": "feedback@startbootstrap.com"
     },
     "license": "MIT",
-    "author": "Start Bootstrap",
+    "author": "Start Bxootstrap",
     "contributors": [
         "David Miller (http://davidmiller.io/)"
     ],
